#-----------------------------------------------------------------------------
# Add subdirectories
#-----------------------------------------------------------------------------
add_subdirectory(chacha)
add_subdirectory(rabbit)
add_subdirectory(rc4)
add_subdirectory(salsa20)
add_subdirectory(sober128)
add_subdirectory(sosemanuk)
